<resources>
    <string name="app_name">Arriwe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="otpmsg">THE OTP WILL AUTOMATICALLY BE TAKEN,\n ELSE ENTER IT HERE.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="searchcontacts_place_number">Bangalore  .  9714062763</string>
    <string name="title_activity_profile_setup">ProfileSetup</string>
    <string name="title_activity_set_up_profile">SetUpProfile</string>
    <string name="image_animation">Image Animation</string>

    //hints
    <string name="hint_name">YOUR NAME</string>
    <string name="hint_mob_no">MOBILE NUMBER</string>
    <string name="hint_enter_code">ENTER THE CODE</string>
    <string name="hint_going_where">WHERE ARE YOU GOING?</string>
    <string name="hint_fav_tag">NAME THIS PLACE</string>
    <string name="where_are_going">Where are you going ?</string>


    <string name="success">Success</string>
    <string name="title_activity_verify_no">VerifyNo</string>
    <string name="verify_no_text">ENTER THE OTP, WE SENT THROUGH SMS TO YOUR MOBILE NUMBER.</string>
    <string name="title_add_frequent_place">ADD TO FAVORITE PLACES</string>
    <string name="delete_fav_confirmation">Are you sure you want to delete this?</string>
    <string name="str_fav_loc_added">Saved to favourite places</string>
    <string name="str_fav_loc_already_exists">A location with this name already exists .</string>
    <string name="str_otp_not_matching">OTP not matching</string>
    <string name="str_add_loc_to_fav">ADD THIS LOCATION TO FAVOURITE</string>
    <string name="str_fetching_loc_details">Fetching location..</string>
    <string name="str_unable_to_locate">Unable to find your location,please enable your location services.</string>
    <string name="str_no_activities">No activity found for you</string>
    <string name="arriwe_privacy_policy">ARRIWE PRIVACY POLICY</string>
    <string name="policy_heading">Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.</string>
    <string name="policy1">\u2022 Before or at the time of collecting personal information, we will identify the purposes for which information is being collected.</string>
    <string name="policy2">\u2022 We will collect and use of personal information solely with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual concerned or as required by law.</string>
    <string name="policy3">\u2022 We will only retain personal information as long as necessary for the fulfillment of those purposes.</string>
    <string name="policy4">\u2022 We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned.</string>
    <string name="policy5">\u2022 Personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.</string>
    <string name="policy6">\u2022 We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.</string>
    <string name="policy7">\u2022 We will make readily available to customers information about our policies and practices relating to the management of personal information.</string>
    <string name="policy8">\u2022 We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained.</string>
    <string name="policy_bottem">ARRIWE TECHNOLOGIES never gives away information about our users. If you choose to e-mail us and provide personally identifiable information about yourself, ARRIWE TECHNOLOGIES will use this information only to respond to your inquiry. ARRIWE TECHNOLOGIES will not sell, rent or otherwise disclose that information to third parties unless such disclosure is necessary for the purposes set forth in this Policy, by law or a policy or notice contained or associated with a specific ARRIWE TECHNOLOGIES product or service.</string>


    <!--error logs & keys-->
    <string name="err_invalid_location_selected">Please select a valid location.</string>
    <string name="err_invalid_fav_name">Invalid place name</string>
    <string name="err_no_network">No internet connection</string>
    <string name="key_freq_visit_place">key_freq_visit_place</string>
    <string name="key_freq_visit_lat">key_freq_visit_lat</string>
    <string name="key_freq_visit_long">key_freq_visit_long</string>
    <string name="key_freq_visit_address">key_freq_visit_address</string>
    <string name="key_name">name</string>
    <string name="key_city_status">citystatus</string>
    <string name="key_user_id">user_id</string>
    <string name="push_location">pushlocation</string>
    <string name="push_last_location_lat">pushlastlocationlat</string>
    <string name="push_last_location_lng">pushlastlocationlng</string>
    <string name="key_contanct_number">contanct_number</string>
    <string name="key_mob_no">mobileNo</string>
    <string name="key_mob">mobile</string>
    <string name="key_phonenos">phoneNos</string>
    <string name="key_profile_photo">photo</string>
    <string name="key_result">result</string>
    <string name="key_status">status</string>
    <string name="key_otp">otp</string>
    <string name="key_success">success</string>
    <string name="key_Success">Success</string>
    <string name="key_profile_pic_path">profile_pic_path</string>
    <string name="key_is_user_logged_in">is_user_logged_in</string>
    <string name="key_is_tagged">is_tagged</string>
    <string name="key_is_added_for_travel">is_travelling</string>
    <string name="key_reg_no">reg_no</string>
    <string name="key_gcm_token_sent_to_server">gcm_token_sent</string>
    <string name="key_tagged_by">taggedby</string>
    <string name="key_tagged_address">taggedaddress</string>
    <string name="key_tagged_title">taggedtitle</string>
    <string name="key_tagged_loc_title">taggedlocationtitle</string>
    <string name="key_tagged_to">taggedto</string>
    <string name="key_travelling_with">travellingwith</string>
    <string name="k_travelling_with">travellingWith</string>
    <string name="key_curr_lat">curr_lat</string>
    <string name="key_curr_long">curr_lon</string>
    <string name="key_curr_location">curr_loc</string>
    <string name="key_lat_origin">latorigin</string>
    <string name="key_long_origin">lonorigin</string>
    <string name="key_lat_dest">latdest</string>
    <string name="key_long_dest">londest</string>
    <string name="key_lat">lat</string>
    <string name="key_long">lon</string>
    <string name="start_lat">start_lat</string>
    <string name="start_long">start_lon</string>
    <string name="travelling_lat">travelling_lat</string>
    <string name="travelling_long">travelling_long</string>
    <string name="key_activity_count">activity_count</string>
    <string name="key_activity_details">activity_details</string>
    <string name="gcm_reg_complete">gcm_reg_complete</string>
    <string name="gcm_token">gcm_token</string>
    <string name="key_traveller_name">traveller_name</string>
    <string name="key_traveller_phone">traveller_phone</string>
    <string name="key_travelling_loc">travelling_loc</string>
    <string name="key_end_loc">end_loc</string>
    <string name="key_traveller_pic">traveller_photo</string>
    <string name="key_tagging">tagging</string>
    <string name="key_loc_changed">loc_changed</string>
    <string name="key_google_api_client">api_client</string>
    <string name="key_curr_address">current_address</string>
    <string name="failed_to_tag_travel">Failed to complete request,please try again later</string>
    <string name="key_distance_travelled">distance_travelled</string>
    <string name="key_travelled_distance">travelled_distance</string>
    <string name="key_distance_left">distance_left</string>
    <string name="key_remaning_distance">remaining_distance</string>
    <string name="key_time_left">time_left</string>
    <string name="key_time_remaning">remaining_time</string>
    <string name="key_time_taken">time_taken</string>
    <string name="key_time_travelled">travelled_time</string>
    <string name="key_has_active_trip">has_active_trip</string>
    <string name="key_active_trip_lat">active_trip_lat</string>
    <string name="key_active_trip_lon">active_trip_lon</string>
    <string name="key_active_trip_id">active_trip_id</string>
    <string name="cancel_trip">Successfully Cancel trip</string>


    <!--profile pic folder-->
    <string name="path_profile_pic">profile_pic</string>

    <string name="btn_title_verify">Verify</string>
    <string name="btn_title_skip_to_activities">ACTIVITIES</string>
    <string name="title_activity_where_rugoing">WhereRUGoing</string>


    <string name="MAPS_API_KEY">AIzaSyA71bR31bDJbs___G05PKMtBBUM9ReR2c0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_activities">Activities</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_group_travel_detail">GroupTravelDetail</string>

    <string name="title_activity_settings">Settings</string>


    <!--Croppper lib-->

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arriwe_technology">Arriwe Technologies Pvt. Ltd.</string>
    <string name="all_rights_reservred">All rights reserved 2017</string>
    <string name="close">Close</string>
    <string name="dess">- - - - - - -</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_tipssecond">Tipssecond</string>
    <string name="tadescription">Tag someone your destination to let them know where you are going and how long you will take to reach.</string>

</resources>


