<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_above="@+id/bottom_ll"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arriwe_privacy_policy"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="@dimen/space_top"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_heading"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:layout_marginLeft="@dimen/space_rigth"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginTop="@dimen/space_top"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/space_rigth"
        android:text="@string/policy8"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_bottem"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/space_rigth"
        android:layout_marginLeft="@dimen/space_rigth"
        android:layout_marginBottom="@dimen/space_bottem_policy"/>





</LinearLayout>
</ScrollView>
    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/close"
            android:textAllCaps="true" />
    </LinearLayout>
    </RelativeLayout>
<!--

-->
