<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/txt_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/arriwe_technology"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_technology"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:text="Version 1.1.0" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_app"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/all_rights_reservred" />


    <View
        android:id="@+id/view_bottem"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_ll"
        android:background="#D9D9D9" />

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/close"
            android:textAllCaps="true" />
    </LinearLayout>


</RelativeLayout>